tests/baselines/reference/genericInterfacesWithoutTypeArguments.errors.txt
==== tests/cases/compiler/genericInterfacesWithoutTypeArguments.ts (2 errors) ====
    interface I<T> { }
    class C<T> { }
    var i: I;
           ~
!!! error TS2173: Generic type references must include all type arguments.
    var c: C<I>;
             ~
!!! error TS2173: Generic type references must include all type arguments.
    